# qt-zig-nix-example

./: CMakeLists.txt  README.md  devbox.json  justfile
src/: main.cpp
